# AnkiFlask

./: DockerFile  Dockerfile  README.md  add_card_test.py  compose.yml  docker_build_run.py  dockerfile  gpt_schema.json  hello.py  multistage.Dockerfile  pyproject.toml  run.sh
.github/workflows/: ci.yaml  docker-deploy.yml.disabled
anki_flask/: key.pem  server.py
certs/: cert.pem
run/: add_card.py
